# Top level CMake configuration file
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT ( ribclients )

FIND_PACKAGE ( SWIG REQUIRED )
INCLUDE ( UseSWIG )
INCLUDE ( CTest )
FIND_PACKAGE ( GoogleLog REQUIRED )

INCLUDE_DIRECTORIES ( ${GLOG_INCLUDE_DIR} )

IF ( CMAKE_BUILD_TYPE MATCHES "Debug")
    ADD_DEFINITIONS ( -DDEBUG )
ENDIF ( CMAKE_BUILD_TYPE MATCHES "Debug")

# Renderer specific options
IF ( RENDERER MATCHES "PRMan" )
  FIND_PACKAGE ( PRMan REQUIRED )
  INCLUDE_DIRECTORIES ( ${PRMAN_INCLUDE_DIR} )
  IF (WIN32)
    ADD_DEFINITIONS ( -DPRMAN_RIBCLIENT )
  ELSE (WIN32)
    ADD_DEFINITIONS ( -DPRMAN_RIBCLIENT -fPIC )
  ENDIF (WIN32)
  SET ( RIBCLIENT_LIBRARIES ${PRMAN_prman_LIBRARY} )
ELSEIF ( RENDERER MATCHES "3Delight" )
  FIND_PACKAGE ( Delight REQUIRED )
  INCLUDE_DIRECTORIES ( ${DELIGHT_INCLUDE_DIR} )
  IF (WIN32)
    ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT )
  ELSE (WIN32)
    ADD_DEFINITIONS ( -DDELIGHT -DDELIGHT_RIBCLIENT -fPIC )
  ENDIF (WIN32)
  SET ( RIBCLIENT_LIBRARIES ${DELIGHT_3delight_LIBRARY} )
ELSE ( RENDERER MATCHES "3Delight" )
ENDIF ( RENDERER MATCHES "PRMan")

INCLUDE_DIRECTORIES ( ./utils )

ADD_SUBDIRECTORY ( utils )

# ADD_SUBDIRECTORY ( java )

ADD_SUBDIRECTORY ( python )

# ADD_SUBDIRECTORY ( ruby )
